# iabar

./: .gitignore  Cargo.toml  LICENSING.md  MIGRATION.md  README.md  ROADMAP.md  manifest.config.ts  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
crates/iabar-wasm/: Cargo.toml  LICENSE
crates/iabar-wasm/src/: agent.rs  anthropic.rs  deepseek.rs  host_tool.rs  lib.rs  openai_compat.rs  provider.rs  server_time.rs
scripts/: build-local.sh  build-store.sh  version.mjs
src/background/: index.ts
src/content/: index.ts
src/harness/: index.ts
src/lib/: browser-tools.ts  i18n.ts  models.ts  origin-permission.ts  page-context.ts  store.ts
src/lib/license/: client.ts  config.ts  token.ts  trusted-time.ts
src/sidepanel/: App.tsx  FilterSelect.tsx  Markdown.tsx  RailAccount.tsx  icons.tsx  index.html  styles.css  theme.ts  useClickOutside.ts  useLicense.ts
src/sidepanel/views/: AccountModal.tsx  Chat.tsx  CheckoutModal.tsx  History.tsx  LicenseSection.tsx  Settings.tsx
