[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/datiexu/iabar"
authors = ["iabar contributors"]

# `iabar` is the browser-extension front for the `iacoder` agent harness.
# The Rust here compiles to `wasm32-unknown-unknown` and is consumed by the
# Chrome MV3 extension via wasm-bindgen. Heavy native concerns of iacoder
# (OS keychain, native TLS, shell/fs tools) are gated out on wasm and
# replaced with browser-native backends — see ROADMAP.md.
[workspace.dependencies]
# Bridge to the sibling iacoder workspace via relative path. Each crate is
# pulled in only once its wasm portability gate lands (see ROADMAP.md).
iacoder-hooks = { path = "../iacoder/crates/iacoder-hooks" }
# Wave A made this compile to wasm (pure types + traits; native I/O gated).
iacoder-core = { path = "../iacoder/crates/iacoder-core" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
async-trait = "0.1"
futures = "0.3"

[profile.release]
# wasm size: optimize for size and strip debug to keep the .wasm small
# enough to ship inside a packed extension.
opt-level = "s"
lto = true
strip = true
