[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
# iabar 壳(本仓自有源码,含 iabar-wasm 桥)按 MIT 授权。注意:编译产物
# `iabar_wasm_bg.wasm` 内嵌专有 AI agent 引擎,该二进制不在 MIT 范围内——
# 许可边界见 LICENSING.md。
license = "MIT"
repository = "https://github.com/infiniact/iabar"
authors = ["iabar contributors"]

# IABar is the browser-extension front for the AI agent harness.
# The Rust here compiles to `wasm32-unknown-unknown` and is consumed by the
# Chrome MV3 extension via wasm-bindgen. Heavy native concerns of the engine
# (OS keychain, native TLS, shell/fs tools) are gated out on wasm and
# replaced with browser-native backends — see docs/ROADMAP.md.
[workspace.dependencies]
# The AI agent engine crates, fetched from the private engine repo over git
# (no local checkout / relative path). Each is pulled in only once its wasm
# portability gate lands (see docs/ROADMAP.md). Building requires git access to the
# private repo under its license (see LICENSING.md).
iacoder-hooks = { git = "https://github.com/infiniact/iacoder.git", branch = "main" }
# Wave A made this compile to wasm (pure types + traits; native I/O gated).
iacoder-core = { git = "https://github.com/infiniact/iacoder.git", branch = "main" }
# ADR-0103 brought context (compaction) + tools across the wasm gate; ADR-0104
# brings the agent loop itself — `iacoder-agent` builds green on wasm32 with
# provider+tools host-injected and shell/keyring/rig/hook-exec absent by `cfg`.
# These are the currently-wireable engine crates; `iacoder-mcp` waits on
# HTTP/SSE-only (stdio can't cross wasm — ADR-0104 §4).
iacoder-context = { git = "https://github.com/infiniact/iacoder.git", branch = "main" }
iacoder-tools = { git = "https://github.com/infiniact/iacoder.git", branch = "main" }
iacoder-agent = { git = "https://github.com/infiniact/iacoder.git", branch = "main" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
async-trait = "0.1"
futures = "0.3"

[profile.release]
# wasm size: optimize for size and strip debug to keep the .wasm small
# enough to ship inside a packed extension.
opt-level = "s"
lto = true
strip = true
